change WordInput input font size to 16px to prevent zoom on iOS

--- a/react-app/src/components/GamePage/Game/Word/WordInput/WordInput.css
+++ b/react-app/src/components/GamePage/Game/Word/WordInput/WordInput.css
@@ -3,3 +3,7 @@
   margin-bottom: 5px;
   font-family: 'Droid Sans'
 }
+
+input {
+  font-size: 16px;
+}
